# glint

./: .gitignore  Cargo.toml  HOVER_PANEL.md  README.md  ROADMAP.md
apps/hook/: Cargo.toml
apps/hook/src/: main.rs
apps/overlay/: index.html  package-lock.json  package.json  settings.html  tailwind.config.ts  vite.config.ts
apps/overlay/src/: App.tsx  settings.tsx  types.ts
apps/overlay/src-tauri/: Cargo.toml  tauri.conf.json
apps/overlay/src-tauri/capabilities/: default.json
apps/overlay/src-tauri/src/: claude_hook_install.rs  commands.rs  cursor_hook_install.rs  file_log.rs  hook_install.rs  http_server.rs  lib.rs  main.rs  session.rs  state.rs  tray.rs  win.rs
apps/overlay/src/components/: CompactView.tsx  FleetBar.tsx  HoverPanel.tsx  PrimaryLine.tsx  Settings.tsx  StatusBadge.tsx  useCompactPanelController.ts
apps/overlay/src/lib/: hoverLeaveDebounce.ts  hoverPanelMotion.ts  panelPlacement.ts  truncate.ts
apps/overlay/src/store/: sessions.ts
apps/overlay/src/styles/: index.css
